# techstore-sandy

./: .gitignore  pyproject.toml  test_logic.py  test_order.py
videos/: page@152e017a8dd2f9c324a5ffed4681e2b6.webm  page@1af00ab88316dd09b053fc4a51e90ac9.webm  page@32047a2f2bc760fe6f152d302f2520e8.webm  page@39bf684700008dec0ec4be91154b3b09.webm  page@3a7b61973847739a16d9c67768417770.webm  page@4c72f0bb24e72ac5446b1dc0d349b034.webm  page@592a5e1141af702491673b6fd044a2c4.webm  page@7058f22f3523d8de5942cb9977c46169.webm  page@811a2c16a29e016ea15dc23f1c608074.webm  page@81454eff6f0f30ececa936849e3ce4c2.webm  page@8bfc1ccfcfc6d4769ab803bc217db128.webm  page@8ddd8fc16d305f1ea3e263d59b7f974c.webm  page@95de600bb93a28168693f84e580620bb.webm  page@a28562e1fef59b742561c9e03dc14c5b.webm  page@a4ef716301ceec0d7f38accf2492b199.webm  page@ab9e06148d2d455f33be635378b5fa70.webm  page@b1a9bdf54dde2ffa56646cb535105192.webm  page@b39022557ef8dd3293d441d473c9aea1.webm  page@c39b2366a19c1db47759d56fd87fd271.webm  page@c3ca41fe05f7056ee6fca4a9367c62a7.webm  page@c5ff80ec1a8bd34b8ef237b1ecc29a7c.webm  page@c97e1d9147cc6ba7dfdf71fb52d3755e.webm  page@ea0dc2fbc2c227bbe86d6f8807892fd7.webm  page@ea8e60e7d85b4e6a61c0cd88737c41e8.webm  page@eb4068d3a173265cbeb577d44c9ce7e9.webm  page@f02c11509a269a8d6bbb30c0a8bb1c19.webm  page@f79b2c8d2a11a950ca58407bf645d3ce.webm
