[project]
name = "techstore-sandy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "allure-pytest>=2.16.0",
    "openpyxl>=3.1.5",
    "pytest-playwright>=0.8.0",
    "pytest-xdist>=3.8.0",
    "python-dotenv>=1.2.2",
]
